--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
 }
 #globalBox {
     background-color: whitesmoke;
+    min-height: 100vh;
     height:100vh;
     width: 100vw;
     display: flex;
@@ -16,7 +17,7 @@ body{
 
 #machine{
     background-color: grey;
-    height: 25% ;
+    height: 400px ;
    width: 300px;
     border: solid 2px black;
     border-radius: 20px;
@@ -27,15 +28,15 @@ body{
 }
 
 #preparationBox{
-    height: 50%;
+    height: 150px;
     border-bottom: solid black ;
     display: flex;
 
 }
 
 #waterBoil{
-    height: 90%;
-    width: 50%;
+    height: 140px;
+    width: 150px;
     margin: 5px;
     background-color: aqua;
     border-right: solid 2px black;
@@ -44,8 +45,8 @@ body{
 
 #waterBoilWarm {
     transition: 3s;
-    height: 90%;
-    width: 50%;
+    height: 140px;
+    width: 150px;
     margin: 5px;
     border-right: solid 2px black;
     border-top-left-radius: 20px;
@@ -54,8 +55,8 @@ body{
 
 #waterBoilEmpty{
     transition: 2s;
-    height: 90%;
-    width: 50%;
+    height: 140px;
+    width: 150px;
     margin: 5px;
     border-right: solid 2px black;
     border-top-left-radius: 20px;
@@ -63,8 +64,8 @@ body{
 }
 #coffeeCase{
     margin: 5px;
-    height: 90%;
-    width: 50%;
+    height: 140px;
+    width: 150px;
     background-color: rgb(233, 230, 226);
     border-right: solid 2px black;
     border-top-right-radius: 20px;
@@ -77,8 +78,8 @@ body{
 #coffeeCaseEmpty{
     transition: 2s;
     margin: 5px;
-    height: 90%;
-    width: 50%;
+    height: 140px;
+    width: 150px;
     background-color: rgb(233, 230, 226);
     border-right: solid 2px black;
     border-top-right-radius: 20px;
@@ -90,14 +91,14 @@ body{
 
 button{
     background-color: brown;
-    width: 100%;
+    width: 300px;
     border-radius: 10px;
     color: blanchedalmond;
 
 }
 #monitorBox{
-    height: 25%;
-    width: 100%;
+    height: 100px;
+    width: 300px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -105,8 +106,8 @@ button{
 #monitor{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 12px;
-    height:50%;
-    width: 100%;
+    height:100px;
+    width: 300px;
     background-color: antiquewhite;
     text-align: center;
     justify-content: center;
@@ -114,8 +115,8 @@ button{
 }
 #timer  {
         border: solid 2px black;
-        height:50%;
-        width: 30%;
+        height:100px;
+        width: 300px;
         background-color: antiquewhite;
         text-align: center;
         justify-content: center;
@@ -123,7 +124,7 @@ button{
 
 #mugCase{
     margin: 5px;
-    height: 45%;
+    height: 135px;
     border-bottom-left-radius: 20px ;
     border-bottom-right-radius: 20px ;
     border: solid black 2px;
@@ -136,7 +137,7 @@ button{
 #mugCaseWithMug{
     transition: 1s;
     margin: 5px;
-    height: 45%;
+    height: 135px;
     border-bottom-left-radius: 20px ;
     border-bottom-right-radius: 20px ;
     border: solid black 2px;
@@ -148,7 +149,7 @@ button{
 }
 #mugCaseWithMugFull{
     margin: 5px;
-    height: 45%;
+    height: 135px;
     border-bottom-left-radius: 20px ;
     border-bottom-right-radius: 20px ;
     border: solid black 2px;
